# Mooncake

./: .gitmodules
mooncake-store/benchmarks/: CMakeLists.txt  spdk_bench.cpp
mooncake-store/include/: file_interface.h  storage_backend.h
mooncake-store/include/offset_allocator/: offset_allocator.hpp
mooncake-store/include/spdk/: spdk_env.h
mooncake-store/src/: CMakeLists.txt  file_storage.cpp  offset_allocator.cpp  posix_file.cpp  storage_backend.cpp
mooncake-store/src/spdk/: CMakeLists.txt  spdk_env.cpp  spdk_file.cpp
mooncake-store/tests/: CMakeLists.txt  spdk_minimal_test.cpp  spdk_test.cpp
